--- a/web/app/templates/lab10_phonebook.html
+++ b/web/app/templates/lab10_phonebook.html
@@ -20,7 +20,10 @@
 
 <body>
   <div id="header" class="container">
-    <h1>Phonebook</h1>
+    <div class="box3">
+     <button id="logout" type="button">Logout</button>
+   </div>
+   <h1>{{ current_user.name }}'s Phonebook</h1>
   </div>
   <div id="add-edit" class="container" hidden="hidden">
     <h2 id="add-edit-caption">Add/Edit a Contact:</h2>
@@ -198,6 +201,12 @@
       clearForm();
       toggleView();
     });
+
+    $("#logout").click(function () {
+     clearForm();
+     window.location.href = "lab12/logout";
+   });
+
 
 
   </script>
