--- a/web/app/templates/lab13/Backup Beta/base.html
+++ b/web/app/templates/lab13/Backup Beta/base.html
@@ -7,6 +7,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <title>Twitter Login</title>
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.min.css" />
+ <link rel="stylesheet" href="static/css/mytwitterlogin.css">
 </head>
 
 
@@ -28,7 +29,7 @@
               Home
             </a>
             {% if current_user.is_authenticated %}
-            <a href="{{ url_for('lab13_profile') }}" class="navbar-item">
+            <a href="{{ ur  l_for('lab13_profile') }}" class="navbar-item">
               Profile
             </a>
             {% endif %}
