lab13_addedit_unfinish

--- a/web/app/static/css/mytwitter2.css
+++ b/web/app/static/css/mytwitter2.css
@@ -90,15 +90,106 @@ input[type=submit] {
   margin-bottom: 20px;
 }
 
-#interact {
-  display: flex;
-  justify-content: space-between;
-  width: 100px; /* Adjust as needed */
-  margin-left: auto;
-  padding-left: -100px;
-}
-
 #interact span {
   padding: 4px;
   cursor: pointer;
+}
+
+#blog1 {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.tweet {
+  border-bottom: 1px solid #e1e8ed;
+  padding: 10px;
+}
+
+.tweet-info {
+  margin-bottom: 5px;
+}
+
+.tweet-username {
+  font-weight: bold;
+  margin-right: 5px;
+}
+
+.tweet-usertag {
+  font-size: 14px;
+}
+
+.tweet-date-created {
+  font-size: 14px;
+}
+
+.tweet-date-updated {
+  font-size: 14px;
+  color: #8899a6;
+}
+
+.tweet-text {
+  font-size: 16px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.tweet-media {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.tweet-arrow {
+  font-size: 24px;
+  margin-top: 5px;
+}
+
+.btn-group {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.btn-group .oi {
+  font-size: 16px;
+  margin-right: 5px;
+  cursor: pointer;
+}
+
+/* Align the interact and edit/report buttons */
+#interact,
+#edit {
+  display: flex;
+  align-items: center;
+}
+
+#interact span,
+#edit span {
+  margin-right: 10px;
+}
+
+#interact span:hover {
+  color: #e440a5;
+}
+
+#edit a {
+  margin-right: 10px;
+}
+
+/* Style the edit/report button */
+#edit a {
+  color: #6c757d;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+#edit a:hover {
+  color: #dc3545;
+}
+
+#edit a i {
+  margin-left: 10px;
+  /* padding-left: 130px; */
+}
+
+#edit {
+  margin-left: auto;
 }
