--- a/web/app/templates/lab11_microblog.html
+++ b/web/app/templates/lab11_microblog.html
@@ -79,6 +79,7 @@
               </div>
             </div>
           </div>
+          <div id="user" data-id="{{ current_user.id }}" data-avatar="{{ current_user.avatar_url }}" data-name="{{ current_user.name }}" data-email="{{ current_user.email }}"></div>
           <div class="tweet" id="blog1">
             
           </div>
