--- a/web/app/templates/lab13/base.html
+++ b/web/app/templates/lab13/base.html
@@ -13,7 +13,7 @@
 <body>
  <section class="hero is-primary is-fullheight">
    <div class="hero-head">
-     \<nav class="navbar">
+      <nav class="navbar">
       <div class="container ">
         <div class="navbar-brand">
           <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarMenuHeroA">
